# WebPlugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
codec/: CMakeLists.txt  WebPDecoder.cpp  WebPDecoder.h
codec/libwebp/: configure
codec/libwebp/examples/: Makefile.in
codec/libwebp/sharpyuv/: Makefile.in
codec/libwebp/src/: Makefile.in
codec/libwebp/src/demux/: Makefile.in  anim_decode.c
codec/libwebp/src/mux/: Makefile.in
codec/libwebp/src/webp/: demux.h
codec/src/: CMakeLists.txt  WebPDecoder.cpp  WebPDecoder.h
plugin/: CMakeLists.txt  ID_APIWrapper.cpp  ID_APIWrapper.h  ID_Plugin.h  ID_WebP.cpp  ID_WebP.def  WebPlugin.cpp  WebPlugin.h  dllmain.cpp  resource.h  resources.rc
plugin/res/: resource.h  resource.h.in  resources.rc
test/: CMakeLists.txt  analyze_diff.py  bmp_diff.py  gen_perf_webp.cpp  main.cpp
