cmake_minimum_required(VERSION 3.10)

set(WEBP_BUILD_ANIM_UTILS OFF CACHE BOOL "")
set(WEBP_BUILD_CWEBP OFF CACHE BOOL "")
set(WEBP_BUILD_DWEBP OFF CACHE BOOL "")
set(WEBP_BUILD_GIF2WEBP OFF CACHE BOOL "")
set(WEBP_BUILD_IMG2WEBP OFF CACHE BOOL "")
set(WEBP_BUILD_VWEBP OFF CACHE BOOL "")
set(WEBP_BUILD_WEBPINFO OFF CACHE BOOL "")
set(WEBP_BUILD_WEBPMUX OFF CACHE BOOL "")
set(WEBP_BUILD_LIBWEBPMUX OFF CACHE BOOL "")
set(WEBP_BUILD_EXTRAS OFF CACHE BOOL "")
set(WEBP_BUILD_TESTS OFF CACHE BOOL "")
set(WEBP_BUILD_WEBP_JS OFF CACHE BOOL "")
add_subdirectory(libwebp)

add_subdirectory(src)
